# showyourwork2

./: .gitignore  .pre-commit-config.yaml  mypy.ini  noxfile.py  pixi.toml  pyproject.toml
.github/workflows/: tests.yml  unit_tests.yml
examples/classic/: showyourwork.yml
examples/classic/src/tex/: ms.tex
examples/simple/: ms.tex  showyourwork.yml
src/showyourwork/plugins/staging/: __init__.py  stages.py  zenodo.py
src/showyourwork2/: __main__.py  cli.py  dag.py  dependencies.py  git.py  logging.py  paths.py  rule_order.py  testing.py  utils.py
src/showyourwork2/config/: __init__.py  config.py  config.schema.yaml  models.py
src/showyourwork2/plugins/: __init__.py  hooks.py
src/showyourwork2/plugins/render_dag/: __init__.py  config.schema.yaml
src/showyourwork2/plugins/staging/: __init__.py  stages.py  zenodo.py
src/showyourwork2/plugins/tex/: __init__.py  config.schema.yaml  config.schema.yml  dependencies.py  models.py  synctex.py  theme.py
src/showyourwork2/plugins/vcs/: __init__.py  models.py
src/showyourwork2/workflow/: Snakefile
src/showyourwork2/workflow/rules/: dependencies.smk  dynamic.smk  main.smk  plugins.smk  render.smk  static.smk
src/showyourwork2/workflow/scripts/: render_dag.py  render_thumbnails.py
tests/: test_config.py  test_dag.py  test_dependencies.py  test_render.py  test_rule_order.py
tests/plugins/render_dag/: test_render_dag.py
tests/plugins/staging/: test_noop.py  test_staging_config.py  test_testing.py  test_zenodo.py
tests/plugins/tex/: test_tex.py  test_tex_build.py  test_tex_dependencies.py  test_tex_theme.py
tests/plugins/vcs/: test_vcs.py
tests/projects/checkpoint/: .gitignore  Snakefile
tests/projects/checkpoint/expected/: dependencies.json
tests/projects/dependency_tree/: ms.tex  showyourwork.yml
tests/projects/explicit_dependencies/: ms.tex  showyourwork.yml
(+34 files in other folders)
